--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "format": "prettier --write **/*.{tsx,ts,js}"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -22,6 +23,8 @@
     "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.2",
@@ -35,10 +38,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.3",
+    "husky": "^4.3.8",
     "less": "^4.1.1",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "typescript": "^4.4.3",
     "vite": "^2.6.0",
     "vite-plugin-mock": "^2.9.6",
@@ -47,5 +50,21 @@
   "engines": {
     "node": ">=14.12.0",
     "npm": "6.14.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js}": [
+      "prettier --write ."
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
