chore: 🐳 react-router-dom设为精确beta6.0.0版

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.12",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^6.0.0-beta.0"
+    "react-router-dom": "6.0.0-beta.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -59,7 +59,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js}": [
-      "prettier --write ."
+      "eslint . --ext ts --ext tsx --ext js"
     ]
   },
   "commitlint": {
