--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@rollup/plugin-babel": "^5.3.0",
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.2",
