--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "format": "prettier --write **/*.{tsx,ts,js}"
+    "build": "tsc --pretty --skipLibCheck && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -20,7 +19,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.12",
     "react-redux": "^7.2.5",
-    "react-router-dom": "6.0.0-beta.0"
+    "react-router-dom": "^6.0.0-beta.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -43,7 +42,7 @@
     "less": "^4.1.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
-    "typescript": "^4.4.3",
+    "typescript": "^4.5.0-dev.20211011",
     "vite": "^2.6.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svgr": "^0.4.0"
