--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "antd": "^4.16.13",
+    "antd": "^4.17.0-alpha.6",
     "axios": "^0.22.0",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
