--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.1.0",
     "react": "^17.0.2",
     "react-activation": "^0.9.4",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.12",
     "react-redux": "^7.2.5",
@@ -28,6 +29,7 @@
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.5",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
