--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "antd": "^4.17.0-alpha.6",
     "axios": "^0.22.0",
+    "classnames": "^2.3.1",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
