--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "vite-plugin-svgr": "^0.4.0"
   },
   "engines": {
-    "node": ">=14.12.0",
+    "node": "14.12.0",
     "npm": "6.14.8"
   },
   "husky": {
