--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "react": "^17.0.2",
-    "react-activation": "^0.9.4",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-intl": "^5.20.12",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.0.0-beta.6"
