--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.3.2",
     "typescript": "^4.5.0-dev.20211011",
     "vite": "^2.6.0",
+    "vite-plugin-checker": "^0.3.4",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svgr": "^0.4.0"
   },
