--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "vite": "^2.6.0",
     "vite-plugin-checker": "^0.3.4",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-svgr": "^0.4.0"
+    "vite-plugin-svgr": "^0.4.0",
+    "vite-plugin-windicss": "^1.4.12",
+    "windicss": "^3.2.0"
   },
   "engines": {
     "node": ">=14.12.0",
