--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mockjs": "^1.1.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-intl": "^5.20.12",
